fix: export button aligned

--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -72,13 +72,16 @@ span {
 }
 
 .button {
-  border-radius: 17%;
+  border-radius: 13%;
+  position: absolute;
+  top: 0;
+  right: 0;
   color: white;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   font-size: 16px;
-  margin: 4px 2px;
+  margin: 4px 12px;
   cursor: pointer;
   background-color: #4473c5;
 }
